# fmriprep-qc-utils

./: .gitignore  README.md  path_config.json  pyproject.toml  setup.sh  testing.ipynb
scripts/: fp_derivs_check.py  full_derivs_check.py  minimal_derivs_check.py  run_derivatives_check.sh  utils.py
