[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp_qctest"
version = "0.1.0"
description = "testing quality control fmriprep minimal / fmriprep derivatives"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Michael Demidenk", email = "demidenko.michael@gmail.com"}
]

dependencies = [
    "nilearn",
    "templateflow",
    "numpy",
    "pandas",
    "nibabel",
    "pyrelimri",
    "niworkflows",
    "configparser",
    "ipython",
    "uuid",
    "jupyter",
    "notebook",
    "jupyterlab"
]

[tool.setuptools]
packages = ["scripts"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]
